--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currnecy converter</title>
+    <meta property="og.image" content="images/money.png">
+    <link rel="icon" href="images/money.png"
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script defer src="script.js"></script>
