--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currnecy converter</title>
-    <meta property="og.image" content="images/tlo.jpg">
+    <meta property="og:image" content="images/tlo.jpg">
     <link rel="icon" href="images/money.png">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
